add materialize .btn class to submit buttons

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
+/*Layout*/
+#main {
+	max-width: 1200px;
+	margin: 0 auto;
+}
 /*Basic*/
 .form-submit {
 	background: green;
+	border: none;
+	color: #fff;
 }
