Replace materialize.css file with materialize.min.css due to lack of 'filled-in' class, add custom style overrides to styles.css for prefix/suffix text, add filled-in checkbox class

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
-/*Overrides*/
+/* Overrides */
 
 .btn {
 	margin: 0 10px 0 0;
 }
 
-/*Band-aids for growing pains, will be removed as project matures*/
+/* Prefix/Suffix CSS overrides */
+form input,
+form select,
+form textarea {
+  width: auto !important;
+}
+.field-prefix + input[type="text"],
+.field-suffix + input[type="text"] {
+  text-align: center;
+}
+
+/* Band-aids for growing pains, will be removed as project matures */
 form select {
 	display: inline-block;
 }
