add borders around text areas

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,3 +87,6 @@ table th, table td {
 .tabs .indicator {
   background: #80cbc4 !important;
 }
+.form-textarea-wrapper {
+  border: 1px solid #bdbdbd;
+}
