apply materialize .card-panel style to status messages and assign them analagous materialze colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,10 @@ fieldset.features-export-component.collapsible {
 a.feed-icon {
   display: none;
 }
+/* Status Messages */
+.alert {
+  color: #fff;
+}
+.alert a {
+  color: #bbdefb;
+}
